--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             href="/favicon-16x16.png"
         />
         <link rel="manifest" href="/site.webmanifest" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Form2Pdf</title>
     </head>
